--- a/.cproject
+++ b/.cproject
@@ -51,6 +51,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/bsp/button"/>
 									<listOptionValue builtIn="false" value="../Drivers/bsp/uart"/>
 									<listOptionValue builtIn="false" value="../Drivers/bsp/timer"/>
+									<listOptionValue builtIn="false" value="../Drivers/bsp/gprs"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.2065969799" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
