--- a/.cproject
+++ b/.cproject
@@ -52,6 +52,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/bsp/uart"/>
 									<listOptionValue builtIn="false" value="../Drivers/bsp/timer"/>
 									<listOptionValue builtIn="false" value="../Drivers/bsp/gprs"/>
+									<listOptionValue builtIn="false" value="../Drivers/bsp/i2c"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.2065969799" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
